b=379505, content overflows border with -moz-border-radius: a.k.a. death to QBCurve; r+sr=roc